apps/games/minecraft/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-map
  namespace: games
spec:
  hostnames:
    - map.darkflame.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: minecraft-map
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
